# django_project_template

./: .cursorrules  .dockerignore  .gitignore  .rumdl.toml  AGENTS.md  CONTEXT.md  Caddyfile  DEPLOYMENT.md  Justfile  MOTIVATION.md  Makefile  Pipfile  README.md  SECURITY.md  compose.yaml  docker-compose.dev.yaml  docker-compose.yaml  justfile  lefthook.yml  pyproject.toml  renovate.json  template-backport.skill
.agents/skills/template-backport/: SKILL.md
.agents/skills/template-django-check/: SKILL.md
.claude/: CLAUDE.md  docs  settings.json
.claude/commands/: speckit.analyze.md  speckit.checklist.md  speckit.clarify.md  speckit.implement.md  speckit.specify.md  speckit.tasks.md  speckit.taskstoissues.md
.claude/docs/: django-stack.md  grug-brain.md  internationalisation-first.md  security-simplicity.md  template-development.md
.claude/output-styles/: concise.md
.claude/rules/: code-quality.mdc  django-models.mdc  django-services.mdc  django-stack.mdc  python.mdc  react.mdc  security-simplicity.mdc  template-development.mdc
.cursor/commands/: speckit.constitution.md  speckit.plan.md
.cursor/rules/: clean-code.mdc  django-all.mdc  grug-brain.mdc  internationalisation-first.mdc  python.mdc  specify-rules.mdc  tailwind.mdc  template-development.mdc
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
ai/commands/: speckit.analyze.md  speckit.checklist.md  speckit.clarify.md  speckit.constitution.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md  speckit.taskstoissues.md
ai/docs/: CLAUDE.md  django-stack.md  grug-brain.md  internationalisation-first.md  security-simplicity.md  template-development.md
ai/rules/: django-models.mdc  django-services.mdc  django-stack.mdc  grug-brain.mdc  internationalisation-first.mdc  python.mdc  security-simplicity.mdc  tailwind.mdc  template-development.mdc
ai/skills/frontend-designer/: SKILL.md
ansible/: 00-dev-env-setup.yaml  01-test-project-template.yaml
app_name/: tests.py-tpl
dev/: 00-dev-env-setup.yaml  01-test-project-template.yaml  02-check-dependencies.sh  README.md  check_ai_links.py  create_test_project.py
docker/: Dockerfile.prod
docs/: DESIGN_SYSTEM_CUSTOMIZATION_GUIDE.md  DESIGN_SYSTEM_IMPLEMENTATION_CHECKLIST.md  PRODUCT_OVERVIEW.md  SERVICE_SELECTOR_REFACTOR_PLAN.md  TEMPLATE_FEEDBACK_TASKS.md
docs/adr/: 0001-adopt-a-django-first-css-token-design-system.md
e2e/: README.md  package.json  playwright.config.ts  pnpm-lock.yaml  run_generated_project.py  tsconfig.json
e2e/tests/: design-foundation.spec.ts
example_app/: README.md  admin.py  models.py-tpl
frontend/project_name/: .gitignore  package.json  pnpm-lock.yaml  vite.config.ts
frontend/project_name/src/: main.tsx  tailwind.css
project_name/: .env.dist  .env.template  conftest.py-tpl  manage.py-tpl
project_name/components/: README.md
project_name/docs/: NEW_PROJECT_CHECKLIST.md  billing-eu.md  frontend-i18n.md  transactional-email.md
project_name/logging/: filters.py-tpl  formatters.py-tpl
project_name/project_name/: celery.py-tpl  selectors.py-tpl  settings.py-tpl  tests.py-tpl  urls.py-tpl  views.py-tpl
project_name/project_name/billing/: README.md  admin.py-tpl  apps.py-tpl  formatting.py-tpl  models.py-tpl  selectors.py-tpl  services.py-tpl  tests.py-tpl  webhooks.py-tpl
project_name/project_name/brand/: apps.py
project_name/project_name/core/: admin.py-tpl  analytics.py-tpl  apps.py-tpl  audit.py-tpl  consent.py-tpl  forms.py-tpl  health.py-tpl  middleware.py-tpl  models.py-tpl  network.py-tpl  newsletter.py-tpl  reauth.py-tpl  signals.py-tpl  tests.py-tpl  views.py-tpl
project_name/project_name/flags/: __init__.py-tpl  admin.py-tpl  apps.py-tpl  decorators.py-tpl  models.py-tpl  providers.py-tpl  services.py-tpl  tests.py-tpl
project_name/project_name/marketing/: apps.py  apps.py-tpl  metadata.py-tpl  models.py-tpl
project_name/project_name/organizations/: README.md  __init__.py-tpl  admin.py-tpl  apps.py-tpl  decorators.py-tpl  middleware.py-tpl  models.py-tpl  predicates.py-tpl  rules.py-tpl  services.py-tpl  tests.py-tpl
project_name/project_name/pages/: admin.py-tpl  apps.py-tpl  faq.py-tpl  faq_selectors.py-tpl  markdown_utils.py-tpl  models.py-tpl  sitemaps.py-tpl  tests.py-tpl  urls.py-tpl  views.py-tpl
project_name/project_name/tenancy/: README.md  __init__.py-tpl  admin.py-tpl  apps.py-tpl  context.py-tpl  decorators.py-tpl  managers.py-tpl  middleware.py-tpl  models.py-tpl  permissions.py-tpl  selectors.py-tpl  services.py-tpl  tests.py-tpl  views.py-tpl
project_name/project_name/tokens/: README.md  __init__.py-tpl  admin.py-tpl  api.py-tpl  apps.py-tpl  auth.py-tpl  models.py-tpl  selectors.py-tpl  services.py-tpl  tests.py-tpl
project_name/project_name/users/: admin.py-tpl  apps.py-tpl  decorators.py-tpl  emails.py-tpl  middleware.py-tpl  models.py-tpl  notifications.py-tpl  privacy.py-tpl  privacy_selectors.py-tpl  privacy_services.py-tpl  tasks.py-tpl  tests.py-tpl
project_name/project_name/utils/: log.py-tpl  models.py-tpl
project_name/templates/: 403.html  app_base.html  base.html  error_base.html
project_name/templates/account/: account_inactive.html  base_reauthenticate.html  confirm_email_verification_code.html  confirm_login_code.html  email.html  email_change.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  reauthenticate.html  signup.html  (+5 more)
project_name/tests/: factories.py-tpl  playwright.py-tpl  test_authentication.py-tpl  test_coming_soon.py-tpl  test_homepage.py-tpl  test_newsletter.py-tpl  test_pricing.py-tpl
scripts/: test-template.sh
specs/001-simple-org-rbac/: COMPLETION_REPORT.md  IMPLEMENTATION_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-add-polar-payments/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+142 files in other folders)
