[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = ["*/migrations/*"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
# Disable conflicting linting/formatting checks
# https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
# Don't use them all but disable them just in case that changes
ignore = [
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
]

[tool.djlint]
profile = "django"
ignore = "H030,H031,H021"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "{{ project_name }}.settings"
python_files = ["tests.py", "test_*.py"]
addopts = "-p no:warnings"

[tool.mypy]
mypy_path = "{{ project_name }}"
plugins = ["mypy_django_plugin.main"]
exclude = '''(?x)(
    \/migrations\/.*\.py$    # migration files
)'''
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "{{ project_name }}.settings"

[tool.uv.sources]

[project]
name = "project_name"
requires-python = ">=3.13"
version = "0.1.0"
dependencies = [
    "django-allauth[mfa,socialaccount]",
    "django-anymail[scaleway]",
    "django-axes",
    "django-braces",
    "django-cotton",
    "django-environ",
    "django-extensions",
    "django-filter",
    "django-hijack",
    "django-guardian",
    "django-meta",
    "django-model-utils",
    "django-ninja",
    "django-structlog",
    "django-storages[s3]",
    "django-sri",
    "django-vite>=3.1.0",
    "django-widget-tweaks",
    "django[argon2]",
    "flagsmith",
    "gunicorn",
    "markdown",
    "nh3",
    "polar-sdk",
    "pillow",
    "typeid-python",
    "whitenoise[brotli]",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "coverage",
    "django-coverage-plugin",
    "django-debug-toolbar",
    "django-stubs[compatible-mypy]",
    "djlint",
    "factory-boy",
    "mypy",
    "playwright",
    "ruff",
    "sphinx",
    "tblib",
    "ansible",
    "lefthook>=1.11.8",
]
